Fixed background image and purple layer
    • The site looks bad, but the effect was a bit tricky for me.
    Luckily, I've got it covered with my new tricks.

--- a/style.css
+++ b/style.css
@@ -15,10 +15,18 @@
 .whole-page {
     position: fixed;
     top: 0;
+    bottom: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
-    box-shadow: 50px 50px  rgba(60, 0, 60,0.5);
+    right: 0;
+}
+
+.purple-layer {
+    background-color: rgba(60, 0, 60,0.5);
+    z-index: -1;
+}
+
+body>img{
+    z-index: -2;
 }
 
 
